--- a/app/app.html
+++ b/app/app.html
@@ -15,8 +15,11 @@
       })();
     </script>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="background: transparent">
+    <div
+      id="root"
+      style="border-radius: 25px; -webkit-app-region: drag; overflow: hidden;"
+    ></div>
     <script>
       {
         const scripts = [];
