--- a/app/app.html
+++ b/app/app.html
@@ -16,10 +16,7 @@
     </script>
   </head>
   <body style="background: transparent">
-    <div
-      id="root"
-      style="border-radius: 25px; -webkit-app-region: drag; overflow: hidden;"
-    ></div>
+    <div id="root" style="border-radius: 25px; overflow: hidden;"></div>
     <script>
       {
         const scripts = [];
